Update GpuRuntimeCallSiteResolverSupportTest.java